[build-system]
requires = ["setuptools>=65.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rhythmboxm3uconverter"
description = ""
readme = "README.md"
dependencies = []
version = "0.1.0"

[project.optional-dependencies]
dev = [
    "black>=23.3.0",
    "pre-commit>=3.0.4",
    "pytest>=7.2.1",
    "ruff>=0.0.272",
    "tox>=3.27.1",
]

[tool.black]
line-length = 120

[tool.flake8]
exclude = ["scripts/tests"]
max-line-length = 120
show-source = true
statistics = true

[tool.isort]
profile = "black"
py_version = 39
multi_line_output = 3
line_length = 120
indent = 4

[tool.pytest.ini_options]
minversion = "7.1"
addopts = "--strict-markers"
testpaths = "tests"

[tool.ruff]
exclude = ["scripts/tests"]
external = ["FURB123"]
flake8-annotations = {"allow-star-arg-any" = true, "suppress-dummy-args" = true}
flake8-pytest-style = {"parametrize-values-type" = "tuple", "mark-parentheses" = false}
format = "grouped"
ignore = ["ANN101","B904","N818","RET505"]
line-length = 120
per-file-ignores={"tests/*"=["ANN","S101","S105","S106"], "scripts/*"=["INP","S105","S106"]}
select = ["ANN","B","BLE","E","ERA","F","I","ICN","INP","ISC","N","PT","PTH","Q","RUF","S","TID","UP","W","YTT"]
show-fixes = true
show-source = true
target-version = "py39"
